// =============================================================
// NR-12 SaaS — Schema (sincronizado com o Supabase) — DBML
// 28 tabelas. Tenancy: account_id nas RAIZES + denormalizado nas
// TRANSACIONAIS (hot path, ADR 0006). Helpers: current_account_ids()
// (setof, RLS) e current_account_id() (escalar, default).
// RLS habilitado em TODAS; politicas: ver docs/database/rls-status.md
// Camada de conhecimento (embeddings/pgvector) viva: knowledge_entries (ADR 0007).
// =============================================================

Project nr12_saas {
  database_type: 'PostgreSQL'
  Note: 'SaaS de inspeção NR-12. Multi-tenant via RLS. Estado refletindo o banco real.'
}

// ===== CAMADA 1 — REFERENCIA (global) =====

Table standards {
  id uuid [pk]
  code varchar [not null, unique]
  title varchar [not null]
  description varchar [null]
  created_at timestamptz [not null]
}

Table standard_versions {
  id uuid [pk]
  standard_id uuid [not null, ref: > standards.id]
  version_label varchar [not null]
  source_portaria_number varchar [null]
  source_issuing_body varchar [null]
  source_signed_date date [null]
  source_dou_date date [null]
  source_url varchar [null]
  effective_from date [null]
  effective_until date [null]
  status varchar [not null, note: 'draft | published | revoked']
  published_at timestamptz [null]
  created_at timestamptz [not null]
  indexes { (standard_id, version_label) [unique] }
}

Table standard_sections {
  id uuid [pk]
  standard_version_id uuid [not null, ref: > standard_versions.id]
  section_type varchar [not null, note: 'module | annex']
  code varchar [not null]
  title varchar [not null]
  position int [not null]
  created_at timestamptz [not null]
  indexes { (standard_version_id, code) [unique] }
}

Table standard_items {
  id uuid [pk]
  standard_section_id uuid [not null, ref: > standard_sections.id]
  parent_item_id uuid [null, ref: > standard_items.id]
  number varchar [not null]
  text text [not null]
  position int [not null]
  created_at timestamptz [not null]
  indexes { (standard_section_id, number) [unique] }
}

Table standard_item_images {
  id uuid [pk]
  standard_item_id uuid [not null, ref: > standard_items.id]
  storage_path varchar [not null]
  caption varchar [null]
  position int [not null]
  created_at timestamptz [not null]
  indexes { (standard_item_id, position) [unique] }
  Note: 'Figuras da norma (global, leitura aberta). Distinta de answer_photos (evidencia do tenant).'
}

Table machine_types {
  id uuid [pk]
  name varchar [not null, unique]
  created_at timestamptz [not null]
}

Table machine_models {
  id uuid [pk]
  machine_type_id uuid [not null, ref: > machine_types.id]
  manufacturer varchar [not null]
  model_code varchar [not null]
  created_at timestamptz [not null]
  indexes { (machine_type_id, manufacturer, model_code) [unique] }
}

Table location_types {
  id uuid [pk]
  name varchar [not null, unique]
  created_at timestamptz [not null]
}

Table risk_matrix_rules {
  probability varchar [not null, note: 'low | medium | high']
  severity varchar [not null, note: 'minor | moderate | major']
  risk_level varchar [not null, note: 'low | medium | high | critical']
  indexes { (probability, severity) [pk] }
}

// ===== FORMAS DE CHECKLIST (tenant) =====

Table checklist_templates {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'RAIZ do tenant']
  standard_version_id uuid [not null, ref: > standard_versions.id]
  name varchar [not null]
  description varchar [null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz [null]
  indexes { (account_id, standard_version_id, name) [unique] }
  Note: 'A "forma" (recorte da norma). Agnostico de maquina.'
}

Table checklist_template_sections {
  id uuid [pk]
  checklist_template_id uuid [not null, ref: > checklist_templates.id]
  standard_section_id uuid [not null, ref: > standard_sections.id]
  created_at timestamptz [not null]
  indexes { (checklist_template_id, standard_section_id) [unique] }
  Note: 'Ordem vem da norma (sem coluna position).'
}

Table checklist_template_items {
  id uuid [pk]
  checklist_template_section_id uuid [not null, ref: > checklist_template_sections.id]
  standard_item_id uuid [not null, ref: > standard_items.id]
  created_at timestamptz [not null]
  indexes { (checklist_template_section_id, standard_item_id) [unique] }
  Note: 'Ordem vem da norma (sem coluna position).'
}

// ===== CAMADA 2 — CADASTRO (tenant) =====

Table accounts {
  id uuid [pk]
  type varchar [not null, note: 'engineer | company (gancho fase 2)']
  name varchar [not null]
  cnpj varchar [null, note: 'check 14 digitos']
  data_sharing_consent boolean [not null, note: 'gancho fase 2']
  created_at timestamptz [not null]
  indexes { (cnpj) [unique] }
  Note: 'default_validity_months removido (NR-12 nao tem validade legal).'
}

Table account_members {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id]
  user_id uuid [not null, ref: > profiles.id, note: 'auth.users / profiles']
  role varchar [not null, note: 'owner (v1)']
  created_at timestamptz [not null]
  indexes {
    (account_id, user_id) [unique]
    (user_id) [unique, note: '1 conta por usuario (v1)']
  }
  Note: 'Indice parcial extra: unique(account_id) where role=owner -> 1 dono por conta.'
}

Table clients {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'RAIZ do tenant']
  linked_account_id uuid [null, ref: > accounts.id, note: 'gancho fase 2']
  name varchar [not null]
  cnpj varchar [null, note: 'check 14 digitos']
  contact_name varchar [null]
  contact_email varchar [null]
  contact_phone varchar [null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz [null]
  indexes { (account_id, cnpj) [unique] }
}

Table locations {
  id uuid [pk]
  client_id uuid [not null, ref: > clients.id]
  location_type_id uuid [null, ref: > location_types.id]
  name varchar [not null, note: 'pode repetir']
  code varchar [not null]
  address varchar [null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz [null]
  indexes { (client_id, code) [unique] }
}

Table machines {
  id uuid [pk]
  machine_model_id uuid [not null, ref: > machine_models.id]
  location_id uuid [not null, ref: > locations.id]
  tag varchar [not null, note: 'rotulo descritivo (pode repetir)']
  code varchar [not null]
  serial_number varchar [null]
  manufacture_year int [null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz [null]
  indexes {
    (location_id, code) [unique]
    (location_id, serial_number) [unique]
  }
}

Table profiles {
  id uuid [pk, note: '= auth.users.id (PK e FK)']
  full_name varchar [not null]
  cpf varchar [null, note: 'check 11 digitos']
  phone varchar [null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  Note: 'Identidade da pessoa, 1:1 com auth.users. Politica: id = auth.uid().'
}

// ===== PESSOAS / RESPONSABILIDADE TECNICA (tenant) =====

Table professionals {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'RAIZ do tenant']
  member_id uuid [null, ref: > account_members.id]
  full_name varchar [not null]
  crea varchar [null]
  cpf varchar [null, note: 'check 11 digitos']
  title varchar [null]
  created_at timestamptz [not null]
  indexes { (account_id, crea) [unique] }
}

Table arts {
  id uuid [pk]
  professional_id uuid [not null, ref: > professionals.id]
  number varchar [not null, unique, note: 'ART unica nacionalmente']
  issued_at date [null]
  pdf_path varchar [null]
  created_at timestamptz [not null]
}

// ===== CAMADA 3 — TRANSACIONAL (tenant) =====
// account_id DENORMALIZADO nestas 7 (+ action_plan_photos): hot path,
// cadeias profundas -> politica RLS direta + indexada (ADR 0006).
// Default da sessao via fn current_account_id() (escalar).

Table inspections {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado (default current_account_id())']
  client_id uuid [not null, ref: > clients.id]
  responsible_professional_id uuid [null, ref: > professionals.id]
  art_id uuid [null, ref: > arts.id]
  name varchar [not null, note: 'identificador legivel: "Cozinha Central"']
  sequence_number int [not null, note: 'distingue repeticoes do mesmo nome']
  status varchar [not null, note: 'in_field | completed']
  performed_on date [null]
  notes text [null, note: 'serve de descricao']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz [null]
  indexes { (client_id, name, sequence_number) [unique] }
  Note: 'Servico do engenheiro, 1..N locais via inspection_scope.'
}

Table inspection_scope {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado']
  inspection_id uuid [not null, ref: > inspections.id]
  location_id uuid [not null, ref: > locations.id]
  created_at timestamptz [not null]
  indexes { (inspection_id, location_id) [unique] }
}

Table checklists {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado']
  inspection_id uuid [not null, ref: > inspections.id, note: 'a qual servico pertence']
  machine_id uuid [not null, ref: > machines.id]
  checklist_template_id uuid [not null, ref: > checklist_templates.id, note: 'a forma aplicada']
  nr_applies boolean [not null, default: true, note: 'gate NR-12: false = maquina excluida (12.1.3/12.1.4), curto-circuita o checklist']
  exclusion_code varchar [null, note: 'item da norma que isenta, ex 12.1.4.c (quando nr_applies=false)']
  exclusion_notes text [null, note: 'comprovacao da exclusao (ex: cert. INMETRO)']
  valid_until date [null, note: 'validade por maquina']
  status varchar [null, note: 'in_progress | completed']
  raw_whatsapp_payload json [null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  indexes { (inspection_id, machine_id, checklist_template_id) [unique] }
  Note: 'Checklist aplicado: forma X na maquina Y, na inspecao Z. nr_applies=false = norma nao se aplica (alimenta Anexo 2 do laudo). check: exclusion_code obrigatorio sse nr_applies=false.'
}

Table answers {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado']
  checklist_id uuid [not null, ref: > checklists.id]
  checklist_template_item_id uuid [not null, ref: > checklist_template_items.id]
  status varchar [not null, note: 'compliant | non_compliant | not_applicable']
  justification text [null, note: 'obrigatoria se non_compliant (check)']
  probability varchar [null]
  severity varchar [null]
  risk_level varchar [null]
  measured_value decimal [null]
  measured_unit varchar [null]
  created_at timestamptz [not null]
  indexes { (checklist_id, checklist_template_item_id) [unique] }
}

Table answer_photos {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado']
  answer_id uuid [not null, ref: > answers.id]
  storage_path varchar [not null]
  position int [not null, note: 'check in (1,2,3)']
  created_at timestamptz [not null]
  indexes { (answer_id, position) [unique] }
}

Table reports {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado']
  inspection_id uuid [not null, ref: > inspections.id, note: '1:N com inspecao (revisoes)']
  version int [not null, default: 1, note: 'revisao do laudo (1 = emissao inicial)']
  revision_reason text [null, note: 'motivo desta revisao; nulo na inicial']
  report_number int [null, note: 'mesmo numero entre revisoes; nulo ate finalizar']
  issued_at date [null]
  status varchar [not null, note: 'draft | in_review | final (por revisao)']
  ai_generated_text text [null]
  final_text text [null]
  pdf_path varchar [null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz [null]
  indexes {
    (inspection_id, version) [unique]
    (account_id, report_number, version) [unique]
  }
  Note: 'Laudo 1:N com inspecao: evolui em revisoes conforme os planos de acao sao executados. Cada revisao tem seu PDF (artefato congelado). Numero mantido, muda a version.'
}

Table action_plans {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado']
  answer_id uuid [not null, unique, ref: > answers.id, note: '1 recomendacao por nao-conformidade']
  description text [not null]
  responsible_name varchar [null, note: 'nullable: pode rascunhar/negociar']
  due_date date [null, note: 'nullable: idem']
  status varchar [not null, note: 'pendente (default) | verificado']
  verified_at timestamptz [null]
  verified_by uuid [null, ref: > profiles.id]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  Note: 'check: status=verificado exige verified_at + verified_by.'
}

Table action_plan_photos {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'denormalizado']
  action_plan_id uuid [not null, ref: > action_plans.id]
  storage_path varchar [not null]
  position int [not null, note: 'check in (1,2,3)']
  created_at timestamptz [not null]
  indexes { (action_plan_id, position) [unique] }
  Note: 'Evidencia fotografica da execucao da acao corretiva.'
}

Table knowledge_entries {
  id uuid [pk]
  account_id uuid [not null, ref: > accounts.id, note: 'tenancy/RLS; default current_account_id()']
  machine_type_id uuid [null, ref: > machine_types.id, note: 'estatistica/filtro']
  machine_model_id uuid [null, ref: > machine_models.id, note: 'estatistica/filtro']
  standard_item_id uuid [not null, ref: > standard_items.id]
  source_answer_id uuid [not null, unique, ref: > answers.id, note: 'proveniencia; backfill idempotente']
  problem_text text [not null, note: 'CONTEUDO: o que se mostra']
  solution_text text [null, note: 'CONTEUDO: o que se preenche']
  risk_level varchar [null]
  problem_embedding "vector(1024)" [not null, note: 'INDICE de busca (Voyage voyage-3); embedding e mao-unica, por isso o texto fica junto']
  model varchar [not null, note: 'ex.: voyage-3']
  created_at timestamptz [not null]
  Note: 'Base de conhecimento (busca semantica + estatistica). 1 linha por NC. Embedding acha, texto mostra. fn match_knowledge (vizinhanca) + view knowledge_stats_by_item (security_invoker). Sugestao de notas: fn nc_rating_suggestion sobre answers.'
}

// ===== AGRUPAMENTOS =====

TableGroup referencia { standards standard_versions standard_sections standard_items machine_types machine_models location_types risk_matrix_rules }
TableGroup formas_checklist { checklist_templates checklist_template_sections checklist_template_items }
TableGroup cadastro { accounts account_members clients locations machines profiles professionals arts }
TableGroup transacional { inspections inspection_scope checklists answers answer_photos reports action_plans action_plan_photos }
TableGroup conhecimento { knowledge_entries }
